<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="ExtrusionData" Id="{16305a3b-4d45-4e59-8191-641eeb16f61f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
	extrusionWeight : REAL;
	
	extrusionHeight : REAL;
	extrusionWidth : REAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>