<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="StrapWrapRecipe" Id="{a84b014b-1b29-4659-8cfe-c9e43867778b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
	//v2 - entries are in the format of position-material separated by material type
	faceCardboard : ARRAY[0..1] OF BOOL;
	facePaper : ARRAY[0..1] OF BOOL;
	
	TopPaper : ARRAY[0..GVL.maxMaterials] OF PaperInterval;
	SidesPaper : ARRAY[0..GVL.maxMaterials] OF PaperInterval;
	BottomPaper : ARRAY[0..GVL.maxMaterials] OF PaperInterval;
	
	Cardboard : ARRAY[0..GVL.maxMaterials] OF PositionMaterials;
	CornerGuard : ARRAY[0..GVL.maxMaterials] OF PositionMaterials;
	
	Chipboard : ARRAY[0..GVL.maxMaterials] OF PositionMaterials;
	WoodBunk : ARRAY[0..GVL.maxMaterials] OF PositionMaterials;
	
	PaperWrap : ARRAY[0..GVL.maxMaterials] OF PositionRotations;
	CardboardWrap : ARRAY[0..GVL.maxMaterials] OF PositionRotations;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>